--- a/src/components/modals/Modal.module.css
+++ b/src/components/modals/Modal.module.css
@@ -12,7 +12,7 @@
   
   .modalContent {
     color: black;
-    background: #fff;
+    background:  #3c425c;
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
